# Zotero-Analytical-Workflow-Skills-Public

./: .gitignore  ACKNOWLEDGEMENTS.md  FILE_MAPPING_AND_HASH_MANIFEST.md  LICENSE  LICENSE_SCOPE.md  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_PERMISSION_CONFIRMATION_RECORD.md  UPSTREAM_PERMISSION_FINAL.md  pyproject.toml
build_week_2026/: BLOCK_LEVEL_CLEAN_REWRITE_VALIDATION_REPORT.md  BUILD_WEEK_READINESS_DECISION.md  CLEAN_REWRITE_SEPARATION_RECORD.md  CODEX_GPT56_USAGE_PLAN.md  DAILY_SKILL_BUNDLE_LOCAL_PUBLIC_IDENTITY_MANIFEST.csv  DAILY_SKILL_BUNDLE_SUBMISSION_READINESS_CHECKPOINT.md  DAILY_SKILL_BUNDLE_SYNC_AND_PRIVACY_AUDIT_REPORT.md  FINAL_DAILY_SKILL_BUNDLE_IDENTITY_AND_PROVENANCE_MANIFEST.csv  FINAL_PROVENANCE_AND_RIGHTS_ACCEPTANCE_REPORT.md  FINAL_SUBMISSION_READINESS_CHECKPOINT.md  MULTI_SOURCE_GITHUB_ORIGIN_CANDIDATE_MANIFEST.csv  MULTI_SOURCE_LICENSE_AND_PERMISSION_ROUTE_MATRIX.md  MULTI_SOURCE_PROVENANCE_READINESS_CHECKPOINT.md  MULTI_SOURCE_PROVENANCE_RECONSTRUCTION_REPORT.md  MULTI_SOURCE_SKILL_PROVENANCE_BLOCK_MANIFEST.csv  NEW_WORK_SINCE_2026_07_13.md  POST_REWRITE_LOCAL_INSTALL_SYNC_MANIFEST.csv  POST_REWRITE_LOCAL_INSTALL_SYNC_REPORT.md  POST_REWRITE_PROVENANCE_AND_RIGHTS_REPORT.md  POST_REWRITE_SUBMISSION_READINESS_CHECKPOINT.md  PRE_EXISTING_WORK.md  PUBLIC_REPOSITORY_SECRET_AND_PRIVACY_SCAN_REPORT.md  PUBLIC_REPO_BASELINE_AND_SCHOLARTRACE_SCOPE_GATE_REPORT.md  README.md  SCHOLARTRACE_DETERMINISTIC_PIPELINE_USAGE.md  SCHOLARTRACE_FIXTURES_SCHEMA_AND_DETERMINISTIC_PIPELINE_REPORT.md  SCHOLARTRACE_FIXTURE_AND_EVALUATION_PLAN.md  (+12 more)
(+62 files in other folders)
