[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scholartrace"
version = "0.1.0"
description = "Deterministic claim-evidence auditing for bounded synthetic education cases."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2.43.0,<3"]

[project.scripts]
scholartrace = "scholartrace.cli:main"

[tool.setuptools]
packages = ["scholartrace", "scholartrace.providers"]
